--- a/src/app/Modulos/usuarios/registrar-usuario/registrar-usuario.component.html
+++ b/src/app/Modulos/usuarios/registrar-usuario/registrar-usuario.component.html
@@ -39,7 +39,7 @@
     <div class="form-field col-lg-4" *ngIf="Direccion.invalid && (Direccion.touched || Direccion.dirty)">
 
       <div class="alert" *ngIf="this.Direccion.hasError('required')">
-        El correo electrónico es requerido
+        La dirección es requerida
       </div>
     </div>
 
