--- a/src/app/Modulos/usuarios/editar-usuario/editar-usuario.component.css
+++ b/src/app/Modulos/usuarios/editar-usuario/editar-usuario.component.css
@@ -21,7 +21,7 @@
 
 .contact-form .form-field{
 	position: relative;
-	margin: 10px 0;
+	margin: 25px 0;
 }
 
 .alert{
@@ -66,6 +66,7 @@
 	border-width: 0 0 2px 0;
 	left: 20px;
 	bottom: 11px;
+  color: white;
 	font-size: 18px;
 	line-height: 26px;
 	font-weight: 400;
@@ -74,38 +75,6 @@
 	background: linear-gradient(50deg, rgba(151,0,255,1) 5%, rgba(39,35,40,1) 50%);
 }
 
-button{
-	display: inline-block;
-	background: linear-gradient(50deg, rgba(151,0,255,1) 5%, rgba(39,35,40,1) 50%);
-	color: #fff;
-  font-weight: 600;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	font-size: 16px;
-	padding: 8px 16px;
-	border: none;
-	width: 200px;
-	cursor: pointer;
-  border-radius: 5px;
-  transition: all 0.2s linear;
-  height: 50px;
-}
 
-button:hover {
-  transform: translatey(3px);
-  box-shadow: none;
-}
 
-button:hover {
-  animation: ani9 0.4s ease-in-out infinite alternate;
-}
-
-@keyframes ani9 {
-  0% {
-      transform: translateY(3px);
-  }
-  100% {
-      transform: translateY(5px);
-  }
-}
 
