Listar conductor por vehiculo

--- a/src/app/Modulos/vehiculos/listar-vehiculo/listar-vehiculo.component.html
+++ b/src/app/Modulos/vehiculos/listar-vehiculo/listar-vehiculo.component.html
@@ -15,8 +15,8 @@
           </ul>
         </div>
         <div class="card-footer">
-          <small class="text-muted"><a href="Conductor/Agregar/" routerLink=''> Agregar conductor </a></small> &nbsp;
-          <small class="text-muted"><a href="vehiculos/Editar/" routerLink=''> Editar vehiculo</a></small> &nbsp;
+          <small class="text-muted"><a href="conductores/ListarConductoresVehiculos/{{ item.CodigoV }}" > Agregar conductor </a></small> &nbsp;
+          <small class="text-muted"><a href="vehiculos/Editar/" > Editar vehiculo</a></small> &nbsp;
           <small class="text-muted"><a href="vehiculos/detalle/{{ item.CodigoV }}">Detalle vehiculo</a></small>
         </div>
       </div>
