--- a/src/app/Modulos/usuarios/conductor/detalle-conductor/detalle-conductor.component.html
+++ b/src/app/Modulos/usuarios/conductor/detalle-conductor/detalle-conductor.component.html
@@ -1,35 +1,32 @@
 <div class="container">
   <h1 class="text-center">Detalle Conductores</h1>
   <div class="card mb-3">
-    <div class="card-body">
-
-
-
+    <div class="card-body" *ngFor="let usuario of detalleConductor">
         <div class="row">
-        <strong class="col-md-4 text-center">Id<h5 class="card-title text-center">ssas-lkfo-4854</h5></strong>
-        <strong class="col-md-4 text-center">Nombre de usuario<h5 class="card-title text-center">darklight1994</h5></strong>
+        <strong class="col-md-4 text-center">Id<h5 class="card-title text-center">{{ usuario.Id }}</h5></strong>
+        <strong class="col-md-4 text-center">Nombre de usuario<h5 class="card-title text-center">{{ usuario.UserName }} </h5></strong>
         <strong class="col-md-4 text-center">Celular<h5 class="card-title text-center">3209868567</h5></strong>
       </div>
 
       <div class="row">
-        <strong class="col-md-4 text-center">Tipo de documento<h5 class="card-title text-center">Cédula de Ciudadanía</h5></strong>
-        <strong class="col-md-4 text-center">Número de documento<h5 class="card-title text-center">1008675845</h5></strong>
-        <strong class="col-md-4 text-center">Rol<h5 class="card-title text-center">Conductor</h5></strong>
+        <strong class="col-md-4 text-center">Tipo de documento<h5 class="card-title text-center">{{ usuario.NombreDoocumento }} </h5></strong>
+        <strong class="col-md-4 text-center">Número de documento<h5 class="card-title text-center">{{ usuario.NumeroDocumento }} </h5></strong>
+        <strong class="col-md-4 text-center">Rol<h5 class="card-title text-center">{{ usuario.NombreRol }} </h5></strong>
       </div>
 
       <div class="row">
-        <strong class="col-md-4 text-center">Genero<h5 class="card-title text-center">Mujer</h5></strong>
-        <strong class="col-md-4 text-center">Correo<h5 class="card-title text-center">darklight@gmail.com</h5></strong>
-        <strong class="col-md-4 text-center">Dirección<h5 class="card-title text-center">Avenida las vegas</h5></strong>
+        <strong class="col-md-4 text-center">Genero<h5 class="card-title text-center">{{ usuario.NombreGenero }} </h5></strong>
+        <strong class="col-md-4 text-center">Correo<h5 class="card-title text-center">{{ usuario.Email }} </h5></strong>
+        <strong class="col-md-4 text-center">Dirección<h5 class="card-title text-center">{{ usuario.Direccion }} </h5></strong>
       </div>
 
       <hr>
 
       <div class="row">
-        <strong class="col-md-3 text-center">Nombre<h5 class="card-title text-center">Dua</h5></strong>
-        <strong class="col-md-3 text-center">Apellido<h5 class="card-title text-center">Lipa</h5></strong>
-        <strong class="col-md-3 text-center">Fecha de inicio<h5 class="card-title text-center">20 de marzo 2003</h5></strong>
-        <strong class="col-md-3 text-center">Fecha fin<h5 class="card-title text-center">07 de julio 2004</h5></strong>
+        <strong class="col-md-3 text-center">Nombre<h5 class="card-title text-center">{{ usuario.Nombre }} </h5></strong>
+        <strong class="col-md-3 text-center">Apellido<h5 class="card-title text-center">{{ usuario.Apellido }} </h5></strong>
+        <strong class="col-md-3 text-center">Fecha de inicio<h5 class="card-title text-center">{{ usuario.FechaInicio }} </h5></strong>
+        <strong class="col-md-3 text-center">Fecha fin<h5 class="card-title text-center">{{ usuario.FechaFin }} </h5></strong>
       </div>
 
       <div class="row">
@@ -37,7 +34,7 @@
       </div>
 
         <div align="center">
-        <button class="btn btn-white"><a href="conductores/" style="color: rgba(151,0,255,1);">Volver</a></button>
+        <button class="btn btn-white"><a href="conductores/ListarConductoresVehiculos/{{usuario.CodigoV  }}" style="color: rgba(151,0,255,1);">Volver</a></button>
       </div>
     </div>
   </div>
