--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,9 @@
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/vehiculos">Vehiculos</a>
           </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/servicios">Servicios</a>
+          </li>
         </ul>
       </li>
       <li nz-submenu nzOpen nzTitle="Form" nzIcon="form" style="background: linear-gradient(90deg, rgba(39,35,40,1) 50%, rgba(151,0,255,1) 100%);">
@@ -54,7 +57,7 @@
               <a routerLink="/vehiculos">Vehiculos</a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/vehiculos">Servicios</a>
+              <a routerLink="/servicios">Servicios</a>
             </li>
             <li nz-menu-item nzMatchRouter>
               <a routerLink="/usuarios/perfil">Ver perfil</a>
