--- a/src/app/Modulos/usuarios/conductor/listar-conductor/listar-conductor.component.html
+++ b/src/app/Modulos/usuarios/conductor/listar-conductor/listar-conductor.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-6" align="center">
-  <h1>Listado Conductores</h1>
+  <h1 style="color: rgba(151,0,255,1);">Listado Conductores</h1>
 </div>
 <div class="col-md-6" align="center">
   <a href="conductores/registrar" class="btn-dark btn-lg btn-block text-center" >Registrar Conductor</a>
