--- a/src/app/Modulos/usuarios/ver-perfil/ver-perfil.component.css
+++ b/src/app/Modulos/usuarios/ver-perfil/ver-perfil.component.css
@@ -18,3 +18,49 @@ strong{
 h5{
   color: rgb(255, 255, 255);
 }
+
+
+input.ng-touched.ng-invalid{
+  border-color: #dc3545
+}
+
+input.ng-valid{
+  border-color: #2889a7
+}
+
+select.ng-touched.ng-invalid{
+  border-color: #dc3545;
+}
+
+select.ng-valid{
+  border-color: #2889a7;
+}
+
+.blue-icon{
+  color: #2889a7;
+}
+
+.red-icon{
+  color: #dc3545;
+}
+
+
+.volver{
+  outline: none;
+  text-decoration: none;
+  padding: 2px 1px 0;
+}
+
+.volver:visited{
+  color: #9B80E5;
+}
+
+.volver:focus{
+  border-bottom: 1px solid;
+  background: #C1B6CC;
+}
+
+.volver:hover{
+  border-bottom: 1px solid;
+  background: #C1B6CC;
+}
